public/css/main.css
/* Color theme
black: #262422
grey: #565853
green: #4D9154
red: #C04B4B
white: #DCD9CD
 */

body {
    background-color: #262422;
    font-family: 'Ropa Sans', sans-serif;
}

body a {
    color: #DCD9CD;
    font-family: 'Ropa Sans', sans-serif;
}

body input {
    font-family: 'Ropa Sans', sans-serif;
}


#facePublisher {
    width: 178px;
    height: 100px;
    display: block;
    position: absolute;
    cursor: move;
    cursor: -webkit-grab;
    cursor: -moz-grab;
    top: 10px;
    right: 10px;
    border-radius: 5px;
    z-index: 99;
    transition: width 200ms, height 200ms ease;
}

#facePublisher ot-publisher {
    width: 100%;
    height: 100%;
    padding: 0;
    margin: 0;
}

#facePublisher:active {
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
}

#session {
    display: block;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}
ot-layout ot-subscriber {
    background-color: #262422;
    display: inline-block;
}
ot-layout {
    display: block;
    width: 100%;
    height: 100%;
}

ot-layout button.resize-btn {
    transition-property: top,bottom,opacity;
    transition-duration: .5s;
    transition-timing-function: ease-in;
    opacity: 0;
    width: 25px;
    height: 25px;
    font-size: 27px;
    cursor: pointer;
    position: absolute;
    background-color: transparent;
    top: -25px;
    margin-top: 2px;
    right: 38px;
    border: none;
    z-index: 99;
}

ot-layout > .OT_big button.resize-btn:before {
    content: "\f267";
}

ot-layout > :hover button.resize-btn {
    top: 0;
    opacity: 1;
}

ot-whiteboard {
    display: block;
    background-color: #DCD9CD;
}

ot-editor {
    display: block;
    background-color: #DCD9CD;
}

ot-editor .CodeMirror {
    background-color: #DCD9CD;
}

#bottomBar {
  transition: opacity 200ms ease;
  opacity: 0;
  width: 100%;
  left: 0;
  bottom: 20px;
  position: absolute;
  text-align: center;
}

body.mouse-move #bottomBar {
  opacity: 1;
}

button.icon-left:before {
    font-family: "Ionicons";
    padding-right: 8px;
    padding-left: 0;
}

#bottomBar button {
    cursor: pointer;
    border: none;
    border-radius: 5px;
    color: #DCD9B5;
    font-size: 22px;
    -webkit-appearance: none;
    font-family: 'Ropa Sans', sans-serif;
    transition: width 200ms, height 200ms ease;
    padding-left: 14px;
    padding-top: 5px;
}

#bottomBar #publishHDCheck {
    color: #DCD9CD;
    position: relative;
    left: -50px;
    top: -4px;
    vertical-align: middle;
}

#bottomBar #publishHDCheck input[type="checkbox"] {
    position: absolute;
    top: -2px;
}

button.green {
    background-color: #4D9154;
}

button.red {
  background-color: #C04B4B;
}

button:disabled {
    background-color: #565853;
    color: #ccc;
    cursor: auto;
}

#shareInfo {
    font-size: 18px;
    color: #DCD9CD;
    text-align: center;
    width: 550px;
    padding: 10px;
    border-radius: 5px;
    background-color: #565853;
    top: 35%;
    position: absolute;
    left: 50%;
    margin-left: -285px;
    transition: width 200ms, height 200ms ease;
}

#loader {
    width: 32px;
    height: 32px;
    position: absolute;
    left: 50%;
    top: 50%;
    margin-left: -16px;
    margin-top: -16px;
    color: #DCD9CD;
    font-size: 32px;
    font-weight: bold;
}


#bottomBar #publishBtn.green {
    text-align: left;
    width: 85px;
}

.statusMessage {
    background-color: #565853;
    width: 100%;
    border-radius: 5px;
    text-align: center;
    vertical-align: middle;
    padding: 10px 0 10px 0;
    color: #DCD9CD;
    margin-bottom: 5px;
    padding: 10px;
}

#statusMessages {
    transition: opacity 200ms ease;
    opacity: 0;
    position: absolute;
    width: 465px;
    left: calc(50% - 242.5px);
    bottom: 80px;
}

@media screen and (max-width: 650px) {  
  #facePublisher {
      width: 89px;
      height: 50px;
  }
  
  #shareInfo {
      width: 250px;
      left: 50%;
      margin-left: -135px;
  }
  
  #statusMessages {
      width: 340px;
      left: calc(50% - 180px);
  }
}

@media only screen and (orientation: portrait) {
    #facePublisher {
        width: 100px;
        height: 150px;
    }
}

@media only screen and (orientation: portrait) and (max-width: 650px) {
    #facePublisher {
        width: 50px;
        height: 75px;
    }
}

body.mouse-move #statusMessages {
  opacity: 1;
}

#bottomBar #footer {
    position: absolute;
    bottom: -15px;
    left: 0;
    font-size: 12px;
}

#screenShareUnsupported {
    opacity: 0;
    transition: opacity 200ms ease;
}

#bottomBar:hover ~ #statusMessages > #screenShareUnsupported {
    opacity: 1;
}

